[package]
name = "wallet"
version = "0.1.0"
authors = ["Lyserith <Lyserith@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
hex = "0.4.3"
chrono = "0.4.23"
getrandom = { version = "0.2.8", features = ["js"] }
bincode = "1.3.3"
pea-int = "0.2.1"
pea-key = "0.3.0"
pea-core = "0.4.0"
pea-address = "0.4.0"
pea-transaction = "0.5.0"
pea-stake = "0.4.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
