[package]
name = "wallet"
version = "0.1.0"
authors = ["Lyserith <Lyserith@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
chrono = "0.4"
getrandom = { version = "0.2", features = ["js"] }
pea-int = "0.4"
pea-key = "0.6"
pea-core = "0.6"
pea-address = "0.6"
pea-transaction = "0.8"
pea-stake = "0.7"
sha2 = "0.10"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"